--- a/app/assets/stylesheets/_style.css.scss
+++ b/app/assets/stylesheets/_style.css.scss
@@ -1,10 +1,3 @@
-// 変数
-$color-white: #FFFFFF;
-$color-blue: #38AEF0;
-$color-gray: #999;
-$color-gray2: #434A54;
-
-
 .sidebar {
   width: 300px;
   float: left;
@@ -14,7 +7,7 @@ $color-gray2: #434A54;
     line-height: 100px;
     padding: 0 20px;
     background-color: #253141;
-    .header__name {
+    &__name {
       display: inline-block;
       h3 {
         color: $color-white;
@@ -22,7 +15,7 @@ $color-gray2: #434A54;
         font-size: 16px;
       }
     }
-    .header__lists {
+    &__lists {
       display: inline-block;
       float: right;
       .list {
@@ -41,11 +34,11 @@ $color-gray2: #434A54;
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
-      .group__name {
+      &__name {
         color: $color-white;
         font-size: 15px;
       }
-      .group__message {
+      &__message {
         color: $color-white;
         font-size: 11px;
         margin-top: 5px;
@@ -62,14 +55,14 @@ $color-gray2: #434A54;
     box-sizing: border-box;
     height: 100px;
     padding: 0 40px;
-    .header-members {
+    &-members {
       float: left;
-      .header-members__title {
+      &__title {
         color: #333;
         font-size: 20px;
         margin-top: 35px;
       }
-      .header-members__names {
+      &__names {
         color: $color-gray;
         font-size: 12px;
         margin-top: 15px;
@@ -80,7 +73,7 @@ $color-gray2: #434A54;
         }
       }
     }
-    .header-edit {
+    &-edit {
       border: 1px solid $color-blue;
       color: $color-blue;
       float: right;
@@ -88,7 +81,7 @@ $color-gray2: #434A54;
       line-height: 40px;
       margin-top: 28px;
       padding: 0 20px;
-      a {
+      &__button {
         color: $color-blue;
         text-decoration: none;
       }
@@ -102,21 +95,21 @@ $color-gray2: #434A54;
     padding: 46px 40px 0;
     .message {
       margin-bottom: 40px;
-      .message-top {
+      &-top {
         display: flex;
-        .message-top__user-name {
+        &__user-name {
           font-size: 16px;
           color: $color-gray2;
           font-weight: bold;
         }
-        .message-top__date {
+        &__date {
           padding-left: 10px;
           font-size: 12px;
           color: $color-gray;
         }
       }
-      .message-bottom {
-        .message-bottom__content {
+      &-bottom {
+        &__content {
           font-size: 14px;
           color: $color-gray2;
           margin-top: 10px;
@@ -129,7 +122,7 @@ $color-gray2: #434A54;
     box-sizing: border-box;
     height: 90px;
     padding: 20px 50px 20px 40px;
-    .form__message {
+    &__message {
       color: #757575;
       border: none;
       box-sizing: border-box;
@@ -138,12 +131,12 @@ $color-gray2: #434A54;
       padding: 0 10px;
       width: calc(100% - 150px);
     }
-    .form__img {
+    &__img {
       background-color: $color-white;
       float: left;
       height: 50px;
       padding-right: 10px;
-      .form__img__icon {
+      &__icon {
         font-size: 20px;
         line-height: 50px;
       }
@@ -158,7 +151,7 @@ $color-gray2: #434A54;
         -webkit-font-smoothing: antialiased;
       }
     }
-    .form__submit {
+    &__submit {
       background-color: $color-blue;
       border: none;
       color: $color-white;
