--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,10 +5,10 @@
         %h3 山本
       %ul.header__lists
         %li.list
-          = link_to '', :method => :get do
+          = link_to '' do
             %i.fa.fa-pencil-square-o.icon
         %li.list
-          = link_to '', :method => :get do
+          = link_to '' do
             %i.fa.fa-cog.icon
     .groups
       .group
