--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,7 +7,7 @@
         = link_to '' do
           %i.fa.fa-pencil-square-o.icon
       %li.list
-        = link_to '' do
+        = link_to destroy_user_session_path, method: :delete do
           %i.fa.fa-cog.icon
   .groups
     .group
