--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,10 +4,10 @@
       %h3 山本
     %ul.header__lists
       %li.list
-        = link_to '' do
+        = link_to new_group_path do
           %i.fa.fa-pencil-square-o.icon
       %li.list
-        = link_to destroy_user_session_path, method: :delete do
+        = link_to edit_group_path(:id) do
           %i.fa.fa-cog.icon
   .groups
     .group
