--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,7 @@
 <div class='chat-group-form'>
   <h1>チャットグループ編集</h1>
-  <form class="edit_chat_group" id="edit_chat_group_22" action="/chat_groups/22" accept-charset="UTF-8" method="post">
+  <%= form_for(@group) do |f| %>
+  <!-- <form class="edit_chat_group" id="edit_chat_group_22" action="/chat_groups/22" accept-charset="UTF-8" method="post"> -->
     <div class="chat-group-form__errors">
       <h2>1件のエラーが発生しました。
       <ul>
@@ -9,10 +10,12 @@
     </div>
     <div class='chat-group-form__field clearfix'>
       <div class='chat-group-form__field--left'>
-        <label class="chat-group-form__label" for="chat_group_name">グループ名</label>
+        <%= f.label :name, 'グループ名', class: 'chat-group-form__label' %>
+        <!-- <label class="chat-group-form__label" for="chat_group_name">グループ名</label> -->
       </div>
       <div class='chat-group-form__field--right'>
-        <input class="chat-group-form__input" placeholder="グループ名を入力してください" type="text" value="ほげー" name="chat_group[name]" id="chat_group_name" />
+        <%= f.text_field :name, placeholder: "グループ名を入力してください", class: "chat-group-form__input", id: "group_name"%>
+        <!-- <input class="chat-group-form__input" placeholder="グループ名を入力してください" type="text" value="ほげー" name="chat_group[name]" id="chat_group_name" /> -->
       </div>
     </div>
     <div class='chat-group-form__field clearfix'>
@@ -29,15 +32,18 @@
     </div>
     <div class='chat-group-form__field clearfix'>
       <div class='chat-group-form__field--left'>
-        <label class="chat-group-form__label" for="chat_group_チャットメンバー">チャットメンバー</label>
+        <!-- <label class="chat-group-form__label" for="chat_group_チャットメンバー">チャットメンバー</label> -->
+        <%= f.label :name, 'チャットメンバー', class: 'chat-group-form__label' %>
       </div>
     </div>
     <div class='chat-group-form__field clearfix'>
       <div class='chat-group-form__field--left'></div>
       <div class='chat-group-form__field--right'>
         <!-- グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください  -->
-        <input type="submit" name="commit" value="Save" class="chat-group-form__action-btn" data-disable-with="Save" />
+        <!-- <input type="submit" name="commit" value="Save" class="chat-group-form__action-btn" data-disable-with="Save" /> -->
+        <%= f.submit "Update", name: "commit", class: "chat-group-form__action-btn" %>
       </div>
     </div>
-  </form>
+  <% end %>
+  <!-- </form> -->
 </div>
