--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -34,6 +34,7 @@
       <div class='chat-group-form__field--left'>
         <!-- <label class="chat-group-form__label" for="chat_group_チャットメンバー">チャットメンバー</label> -->
         <%= f.label :name, 'チャットメンバー', class: 'chat-group-form__label' %>
+        <%= f.collection_check_boxes(:user_ids, User.all, :id, :name) %>
       </div>
       <div class='chat-group-form__field--right'>
         <!-- グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください  -->
