Localizing into Japanese　Flash message

--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -2,11 +2,13 @@
   %h1 新規チャットグループ
   = form_for(@group) do |f|
     / <form class="new_chat_group" id="new_chat_group" action="/chat_groups" accept-charset="UTF-8" method="post">
-    .chat-group-form__errors
-      %h2
-        1件のエラーが発生しました。
-        %ul
-          %li エラーです
+    - if @group.errors.any?
+      .chat-group-form__errors
+        %h2
+          = "#{@group.errors.count}件のエラーが発生しました。"
+          %ul
+          - @group.errors.full_messages.each do |msg|
+            %li= msg
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         / <label class="chat-group-form__label" for="chat_group_name">グループ名</label>
