--- a/app/assets/stylesheets/_style.css.scss
+++ b/app/assets/stylesheets/_style.css.scss
@@ -31,6 +31,7 @@
     background-color: $color-gray3;
     height: calc(100vh - 100px);
     padding: 0 20px;
+    overflow: scroll;
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
