--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,15 +1,7 @@
 .chat
-  = render 'groups/index'
+  = render 'layouts/sidebar'
   .main
-    .header
-      .header-members
-        .header-members__title
-          %p サンプル
-        %ul.header-members__names
-          Menber:
-          %li.name 山本
-      .header-edit
-        = link_to 'Edit', edit_group_path(:id), class: "header-edit__button"
+    = render 'groups/message'
     .messages
       .message
         .message-top
