--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -2,11 +2,13 @@
   %h1 チャットグループ編集
   = form_for(@group) do |f|
     / <form class="edit_chat_group" id="edit_chat_group_22" action="/chat_groups/22" accept-charset="UTF-8" method="post">
-    .chat-group-form__errors
-      %h2
-        1件のエラーが発生しました。
-        %ul
-          %li エラーです
+    - if @group.errors.any?
+      .chat-group-form__errors
+        %h2
+          = "#{@group.errors.count}件のエラーが発生しました。"
+          %ul
+          - @group.errors.full_messages.each do |msg|
+            %li= msg
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label :name, 'グループ名', class: 'chat-group-form__label'
@@ -30,6 +32,8 @@
       .chat-group-form__field--left
         / <label class="chat-group-form__label" for="chat_group_チャットメンバー">チャットメンバー</label>
         = f.label :name, 'チャットメンバー', class: 'chat-group-form__label'
+      .chat-group-form__field--right
+        = f.collection_check_boxes(:user_ids, User.all, :id, :name)
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
