--- a/app/assets/stylesheets/_style.css.scss
+++ b/app/assets/stylesheets/_style.css.scss
@@ -20,7 +20,7 @@
       float: right;
       .list {
         display: inline-block;
-        .fa {
+        &--action {
           color: $color-white;
           font-size: 16px;
         }
@@ -32,6 +32,9 @@
     height: calc(100vh - 100px);
     padding: 0 20px;
     overflow: scroll;
+    &--text {
+      text-decoration: none;
+    }
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
