--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -20,7 +20,6 @@
     border: 1px solid #ddd;
     border-radius: 2px;
     text-align: center;
-
     h2 {
       margin-bottom: 10px;
       color: #f05050;
@@ -37,6 +36,8 @@
       margin: 0;
       padding: 0;
       font-size: 13px;
+      list-style: none;
+      color: black; 
     }
   }
 
