--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -1,5 +1,6 @@
-.group
-  .group__name
-    %p= groups.name
-  .group__message
-    %p テストメッセージです。。。
+= link_to new_group_message_path(groups), class: 'groups--text' do
+  .group
+    .group__name
+      %p= groups.name
+    .group__message
+      %p テストメッセージです。。。
