--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -1,6 +1,6 @@
-= link_to new_group_message_path(groups), class: 'groups--text' do
+= link_to new_group_message_path(group), class: 'groups--text' do
   .group
     .group__name
-      %p= groups.name
+      %p= group.name
     .group__message
       %p テストメッセージです。。。
