--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -19,10 +19,11 @@
       .message-bottom
         %p.message-bottom__content これはサンプルです。。。
   .form
-    %form{:action => "index.html", :method => "post"}
-      %input.form__message{:name => "form__message", :type => "text", :value => "type a message"}/
+    = binding.pry
+    = form_for [@group, @message] do |f|
+      = f.text_field :text, class: 'form__message', autofocus: true, placeholder: 'type a message'
       .form__img
-        %label.form__img__icon{:for => "message_image"}
+        %label
           %i.fa.fa-picture-o.fa-4x
-          %input#message_image.hidden{:name => "message[image]", :type => "file"}/
-      %input.form__submit{:name => "commit", :type => "submit", :value => "Send"}/
+          = f.file_field :image, class: 'message_image'
+      = f.submit 'Send', class: 'form__submit'
