message Modified slightly

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -7,4 +7,4 @@
   .message-bottom
     %p.message-bottom__content= message.text
     - if message.image.present?
-      = image_tag("#{message.image}", :class => "message-bottom__img")
+      = image_tag("#{message.image}", class: "message-bottom__img")
