--- a/app/assets/stylesheets/_style.css.scss
+++ b/app/assets/stylesheets/_style.css.scss
@@ -123,7 +123,7 @@
       }
     }
   }
-  .form_message {
+  .form {
     background-color: #DDDDDD;
     box-sizing: border-box;
     height: 90px;
