--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -7,6 +7,7 @@
           = "#{@group.errors.count}件のエラーが発生しました。"
           %ul
           - @group.errors.full_messages.each do |msg|
+          -binding.pry
             %li= msg
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
@@ -14,31 +15,22 @@
       .chat-group-form__field--right
         = f.text_field :name, placeholder: "グループ名を入力してください", class: "chat-group-form__input", id: "group_name"
     .chat-group-form__field.clearfix
-      / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-      /
-        <div class='chat-group-form__field--left'>
-        <label class="chat-group-form__label" for="chat_group_チャットメンバーを追加">チャットメンバーを追加</label>
-        </div>
-        <div class='chat-group-form__field--right'>
-        <div class='chat-group-form__search clearfix'>
-        <input class='chat-group-form__input' id='user-search-field' placeholder='追加したいユーザー名を入力してください' type='text'>
-        </div>
-        <div id='user-search-result'></div>
-        </div>
+      .chat-group-form__field--left
+        = f.label 'チャットメンバーを追加', class: 'chat-group-form__label'
+      .chat-group-form__field--right
+        .chat-group-form__search.clearfix
+          %input.chat-group-form__input.js-user-search-field{ type: 'text', placeholder: '追加したいユーザー名を入力してください' }
+        .js-user-seaerch-result
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label :name, 'チャットメンバー', class: 'chat-group-form__label'
       .chat-group-form__field--right
-        = f.collection_check_boxes(:user_ids, User.all, :id, :name)
-        / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-        / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-        /
-          <div id='chat-group-users'>
-          <div class='chat-group-user clearfix' id='chat-group-user-22'>
-          <input name='chat_group[user_ids][]' type='hidden' value='22'>
-          <p class='chat-group-user__name'>seo_kyohei</p>
-          </div>
-          </div>
+        .chat-group-users.js-add-user
+        - @group.users.each do |user|
+          .chat-group-user.clearfix.js-chat-member{ id: "chat-group-user-#{user.id}" }
+            %input{ type: 'hidden', name: 'group[user_ids][]', value: "#{user.id}" }
+            %p.chat-group-user__name= user.name
+            %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn{ 'data-user-id': user.id, 'data-user-name': user.name }削除
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
