html,css Change style

--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -7,7 +7,6 @@
           = "#{@group.errors.count}件のエラーが発生しました。"
           %ul
           - @group.errors.full_messages.each do |msg|
-          -binding.pry
             %li= msg
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
@@ -17,9 +16,9 @@
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label 'チャットメンバーを追加', class: 'chat-group-form__label'
-      .chat-group-form__field--right
+      .chat-group-form__field--right.js_inc
         .chat-group-form__search.clearfix
-          %input.chat-group-form__input.js-user-search-field{ type: 'text', placeholder: '追加したいユーザー名を入力してください' }
+          %input.chat-group-form__input.js-user-search-field{ name: 'keyword', type: 'text', placeholder: '追加したいユーザー名を入力してください' }
         .js-user-seaerch-result
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
